[package]
name = "game_plugin"
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_kira_audio = { version = "0.5.1" }
bevy_asset_loader = "0.4.0"
rand = "0.8.3"
# bevy_rapier2d = { version = "0.10.1", features = [ "enhanced-determinism", "serde-serialize" ] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
# ordered-float = "2.0"
uuid = { version = "0.8.1", features = ["v4"] }
bevy_backroll = "0.1.0"
backroll_transport_udp = "0.1.0"
# bitflags = "1.2.1"
bytemuck = {version = "1.5.1", features = ["derive"]}
